--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:asttgJZgNhhpyoFWNLUfuKzgMavZbYfp@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:DnfRKfrBACYZptjBnwfFKhYDQaNzOAjr@autorack.proxy.rlwy.net:58902/railway
